--- a/apps/home-dashboard/src/index.html
+++ b/apps/home-dashboard/src/index.html
@@ -8,6 +8,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <home-monorepo-root></home-monorepo-root>
+    <dashboard-root></dashboard-root>
   </body>
 </html>
